# rust_playground

mpi_test/: Cargo.toml
mpi_test/src/: main.rs
