[package]
name = "mpi_test"
version = "0.1.0"
authors = ["fizban007 <fizban007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi.git" }
hdf5 = "0.6"

[profile.dev]
opt-level = 1
